# limb

./: .gitignore  README.md  index.html  legacy_simulation.html  package-lock.json  package.json  playwright.config.js  pyproject.toml
examples/: physics_rapier_character_controller.html  simulate_spoon_fork.py
src/limb/: __init__.py  actions.py  controller.py  cue.py  detector.py  embodied_learning.py  memory.py  outcome.py  policy.py  simulation.py  spikes.py
src/ui/: learning.js  main.js  styles.css  vision.js
tests/: test_embodied_learning.py  test_pipeline.py
tests/ui/: learning.test.js  vision.test.js  visual.spec.js
